--- a/style.css
+++ b/style.css
@@ -237,10 +237,34 @@ font-style: italic;
 
 .imagem-beneficios {
     width: 60%;
+    opacity: 1;
+    transition: 1s;
+    box-shadow: 10px 10px 10px #000000;
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.3;
 }
 
 .video{
     width: 560px;
     margin: 2em auto;
+}
 
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
 }
